--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,6 +9,7 @@
       --primary: 0, 90.78%, 42.55%;
       --secondary: 25.91, 100%, 43.14%;
       --radius: "none";
+      --danger: 0, 100%, 50%;
     }
 
     .dark {
@@ -17,6 +18,7 @@
         --primary: 0, 90.78%, 42.55%;
         --secondary: 25.91, 100%, 43.14%;
         --radius: "none";
+        --danger: 0, 100%, 50%;
     }
   
     :root:has(.no-doc-scroll) {
