--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -7,7 +7,7 @@
       --background: 0, 0%, 0%;
       --foreground: 0, 0%, 93.33%;
       --primary: 0, 90.78%, 42.55%;
-      --secondary: 25.91, 100%, 43.14%;
+      --secondary: 0, 48.15%, 47.65%%;
       --radius: "none";
       --danger: 0, 100%, 50%;
     }
@@ -16,7 +16,7 @@
         --background: 0, 0%, 0%;
         --foreground: 0, 0%, 93.33%;
         --primary: 0, 90.78%, 42.55%;
-        --secondary: 25.91, 100%, 43.14%;
+        --secondary: 	0, 100%, 8.2%;
         --radius: "none";
         --danger: 0, 100%, 50%;
     }
